# libtropic-linux

./: .git-rebase-info  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  FAQ.md  README.md
.github/workflows/: clang_format_check.yml
Linux_SPI/: CMakeLists.txt  README.md
Linux_SPI/src/: main.c
TS1302_devkit/: CMakeLists.txt  README.md
TS1302_devkit/src/: main.c
docs/: devkit_ts1302.md  devkit_ts1303.md
generic-linux-spi/: CMakeLists.txt  README.md
generic-linux-spi/src/: main.c
generic-linux-usb-dongle/: CMakeLists.txt  README.md
generic-linux-usb-dongle/src/: main.c
src/: main.c
